fix(bukkit): Use `get(0)` instead of `getFirst()` to avoid jdk version issue